[gd_scene load_steps=17 format=3 uid="uid://cm171rearli5x"]

[ext_resource type="Script" path="res://main.gd" id="1_qk8ce"]
[ext_resource type="PackedScene" uid="uid://cpo5iec4glmja" path="res://scenes/LayerDisplay.tscn" id="2_eba48"]
[ext_resource type="PackedScene" uid="uid://xuhx2e6vglvy" path="res://scenes/LayerConfig.tscn" id="3_5nyrh"]
[ext_resource type="PackedScene" uid="uid://bvwugetjfe4gi" path="res://scenes/MenuBar.tscn" id="4_5uslx"]
[ext_resource type="Texture2D" uid="uid://bmn3desr6qvxu" path="res://icons/image-solid.svg" id="4_b0vcs"]
[ext_resource type="Texture2D" uid="uid://brpo7atj3nrwb" path="res://icons/chevron-left-solid.svg" id="4_dytnr"]
[ext_resource type="Texture2D" uid="uid://dlww632quv8fd" path="res://icons/chevron-right-solid.svg" id="4_kc8da"]
[ext_resource type="Texture2D" uid="uid://daq4l8c24vic8" path="res://icons/stop-solid.svg" id="4_o88ys"]
[ext_resource type="Texture2D" uid="uid://8mjakyitmy1b" path="res://icons/play-solid.svg" id="5_jsmty"]
[ext_resource type="Script" path="res://ui/toggle_button.gd" id="5_ogorr"]
[ext_resource type="Texture2D" uid="uid://db3k2b3bhhb50" path="res://icons/pencil-solid.svg" id="6_u4i3j"]
[ext_resource type="LabelSettings" uid="uid://bg1npmc75mf45" path="res://themes/label_settings.tres" id="7_4paol"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_002nx"]
bg_color = Color(0.239216, 0.239216, 0.239216, 0.898039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfg2l"]
bg_color = Color(0, 0, 0, 0.239216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhpoi"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
expand_margin_left = 10.0
expand_margin_right = 10.0
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_nort3"]
font_size = 24

[node name="Control" type="VBoxContainer" node_paths=PackedStringArray("display", "interface", "layers_interface", "loading_panel", "current_frame_label", "total_frames_label", "mode_button", "menu_bar")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qk8ce")
layer = ExtResource("2_eba48")
layer_config = ExtResource("3_5nyrh")
display = NodePath("MainViewport/Display")
interface = NodePath("MainViewport/Interface")
layers_interface = NodePath("MainViewport/Interface/Interface/ScrollContainer/VBoxContainer/Layers")
loading_panel = NodePath("MainViewport/LoadingPanel")
current_frame_label = NodePath("MainViewport/Interface/FrameContainer/Panel/FrameNumber/CurrentFrame")
total_frames_label = NodePath("MainViewport/Interface/FrameContainer/Panel/FrameNumber/TotalFrames")
mode_button = NodePath("MainViewport/Interface/Interface/ScrollContainer/VBoxContainer/HBoxContainer/ModeButton")
menu_bar = NodePath("PanelContainer/MenuBar")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MenuBar" parent="PanelContainer" instance=ExtResource("4_5uslx")]
layout_mode = 2

[node name="MainViewport" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Display" type="Control" parent="MainViewport"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Interface" type="Control" parent="MainViewport"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Interface" type="PanelContainer" parent="MainViewport/Interface"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_002nx")

[node name="ScrollContainer" type="ScrollContainer" parent="MainViewport/Interface/Interface"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainViewport/Interface/Interface/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MainViewport/Interface/Interface/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainViewport/Interface/Interface/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ModeButton" type="Button" parent="MainViewport/Interface/Interface/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "View  Mode"
icon = ExtResource("4_b0vcs")
script = ExtResource("5_ogorr")
enabled_icon = ExtResource("6_u4i3j")
enabled_text = "Draw Mode"

[node name="HSeparator2" type="HSeparator" parent="MainViewport/Interface/Interface/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="NewLayerButton" type="Button" parent="MainViewport/Interface/Interface/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Create new layer"

[node name="Layers" type="VBoxContainer" parent="MainViewport/Interface/Interface/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="FrameContainer" type="VBoxContainer" parent="MainViewport/Interface"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -52.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="MainViewport/Interface/FrameContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayerContainer" type="HBoxContainer" parent="MainViewport/Interface/FrameContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="StopButton" type="Button" parent="MainViewport/Interface/FrameContainer/PanelContainer/PlayerContainer"]
layout_mode = 2
icon = ExtResource("4_o88ys")

[node name="PlayButton" type="Button" parent="MainViewport/Interface/FrameContainer/PanelContainer/PlayerContainer"]
layout_mode = 2
icon = ExtResource("5_jsmty")

[node name="Panel" type="PanelContainer" parent="MainViewport/Interface/FrameContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FrameNumber" type="HBoxContainer" parent="MainViewport/Interface/FrameContainer/Panel"]
layout_mode = 2

[node name="PrevFrameButton" type="Button" parent="MainViewport/Interface/FrameContainer/Panel/FrameNumber"]
layout_mode = 2
icon = ExtResource("4_dytnr")

[node name="CurrentFrame" type="Label" parent="MainViewport/Interface/FrameContainer/Panel/FrameNumber"]
layout_mode = 2
text = "Тест"
label_settings = ExtResource("7_4paol")
vertical_alignment = 1

[node name="NextFrameButton" type="Button" parent="MainViewport/Interface/FrameContainer/Panel/FrameNumber"]
layout_mode = 2
icon = ExtResource("4_kc8da")

[node name="VSeparator" type="VSeparator" parent="MainViewport/Interface/FrameContainer/Panel/FrameNumber"]
layout_mode = 2

[node name="TotalFrames" type="Label" parent="MainViewport/Interface/FrameContainer/Panel/FrameNumber"]
layout_mode = 2
text = "Вау"
label_settings = ExtResource("7_4paol")
vertical_alignment = 1

[node name="LoadingPanel" type="PanelContainer" parent="MainViewport"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bfg2l")

[node name="CenterContainer" type="CenterContainer" parent="MainViewport/LoadingPanel"]
layout_mode = 2

[node name="LoadingPanel" type="PanelContainer" parent="MainViewport/LoadingPanel/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vhpoi")

[node name="Label" type="Label" parent="MainViewport/LoadingPanel/CenterContainer/LoadingPanel"]
layout_mode = 2
text = "Loading..."
label_settings = SubResource("LabelSettings_nort3")

[connection signal="frame_duration_changed" from="PanelContainer/MenuBar" to="." method="_on_frame_duration_changed"]
[connection signal="fullscreen_toggled" from="PanelContainer/MenuBar" to="." method="_on_fullscreen_toggled"]
[connection signal="load_config_requested" from="PanelContainer/MenuBar" to="." method="_load_layers_config"]
[connection signal="save_config_as_requested" from="PanelContainer/MenuBar" to="." method="_save_layers_config"]
[connection signal="pressed" from="MainViewport/Interface/Interface/ScrollContainer/VBoxContainer/HBoxContainer/ModeButton" to="." method="_toggle_mode"]
[connection signal="pressed" from="MainViewport/Interface/Interface/ScrollContainer/VBoxContainer/NewLayerButton" to="." method="_create_layer"]
[connection signal="pressed" from="MainViewport/Interface/FrameContainer/PanelContainer/PlayerContainer/StopButton" to="." method="_stop_frames"]
[connection signal="pressed" from="MainViewport/Interface/FrameContainer/PanelContainer/PlayerContainer/PlayButton" to="." method="_play_frames"]
[connection signal="pressed" from="MainViewport/Interface/FrameContainer/Panel/FrameNumber/PrevFrameButton" to="." method="_previous_frame"]
[connection signal="pressed" from="MainViewport/Interface/FrameContainer/Panel/FrameNumber/NextFrameButton" to="." method="_next_frame"]
